Implement login page, Fix duplicate request, Add Sass to project, Some layout changes

--- a/iWork.Web.UI/Template/Default/Controls/button/submit.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/submit.html
@@ -1,3 +1,3 @@
 ﻿<control>
-    <button type="submit" class="btn btn-primary btn-success" ng-click="formsubmit()">$iv-label</button>
+    <button type="submit" class="btn btn-primary" ng-click="formsubmit()">$iv-label</button>
 </control>
