Add Dropzone file uploader, add kitchen sink to project

--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -5,13 +5,16 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="/Content/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/Content/lib/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone.css" />
+
+    <link rel="stylesheet" href="/Content/css/style.css" media="screen">
     <script src="/Content/Scripts/jquery-2.1.1.min.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/Content/Scripts/angular.min.js"></script>
     <script type="text/javascript" src="/Content/lib/slick/slick.min.js"></script>
     <script type="text/javascript" src="/Content/lib/jquery.svginject.js"></script>
+    <script type="text/javascript" src="/Content/lib/dropzone.js"></script>
     <script src="/Content/js/page.js"></script>
 </head>
 <body>
@@ -25,6 +28,7 @@
                 <li><a href="/iView/Contacts/Contactslist.html">Conatct List</a></li>
                 <li><a href="/iView/Rollcall/list.html">RollCall</a></li>
                 <li><a href="/iView/Contacts/list.html">Contact</a></li>
+                <li><a href="/iView/kitchensink/kitchensink.html">kitchensink</a></li>
             </ul>
             <div class="nav navbar-nav navbar-right">
             </div>
