--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -224,10 +224,12 @@ body {
 .search-box {
   display: block;
   float: left;
-  width: 100%;
   border-bottom: 1px solid #eeeeee;
   position: relative;
-  overflow: hidden; }
+  overflow: visible;
+  width: 98%;
+  padding: 0px !important;
+  margin: 0px !important; }
 
 .search-box input {
   border: none !important;
@@ -237,10 +239,12 @@ body {
   color: #333333; }
 
 .search-box span.search-box-icon {
+  display: block;
   float: left;
   position: absolute;
   top: 5px;
-  left: 4px;
+  width: 24px;
+  left: 0px;
   font-size: 24px;
   color: #999999; }
 
@@ -360,16 +364,19 @@ body {
   font-size: 20px;
   color: #999999; }
 
+.dz-preview {
+  display: block;
+  float: left;
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(204, 204, 204, 0.65);
+  -moz-box-shadow: 0px 0px 3px 1px rgba(204, 204, 204, 0.65);
+  box-shadow: 0px 0px 3px 1px rgba(204, 204, 204, 0.65); }
+
 .dropzone .dz-preview .dz-image {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   border-radius: 5px;
-  border-radius: 0px !important; }
-
-.dz-preview {
-  display: block;
-  float: left; }
+  border-radius: 0 !important; }
 
 .dz-error-message {
   z-index: 10000; }
