--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -5,8 +5,13 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
+
+    <!--<link rel="stylesheet" href="https://raw.githubusercontent.com/pylover/bootstrap-rtl/master/build/css/bootstrap.rtl.css">-->
+    <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.min.css">-->
+
     <link rel="stylesheet" type="text/css" href="/Content/lib/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone.css" />
+
 
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
     <script src="/Content/Scripts/jquery-2.1.1.min.js"></script>
@@ -34,7 +39,7 @@
             </div>
         </div>
         <div class="navbar-right col-md-1 col-xs-3">
-            <div class="member-territory">
+            <div class="member-territory pull-right">
                 <img class="svg-inject" src="/Content/img/user.svg" />
             </div>
         </div>
