--- a/iWork.Web.UI/Template/Default/Controls/grid/table.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/table.html
@@ -1,5 +1,5 @@
 ﻿<control iv-title="null" iv-observe="null" >
-    <div class="form-container" ng-controller="$iv-controller" >
+    <div class="grid-container" ng-controller="$iv-controller" >
         <h3 class="panel-title" ng-show="showFormTitle">$iv-title</h3>
         <table class="table table-striped table-hover ">
             <iv-content>
