--- a/iWork.Web.UI/Template/Default/Controls/uploader/dropzone.html
+++ b/iWork.Web.UI/Template/Default/Controls/uploader/dropzone.html
@@ -1,18 +1,46 @@
 ﻿<control iv-label="">
-    <label>$iv-label</label>
-    <form id="dropzoneUploader" action="/file-upload" class="dropzone">
-        <div class="fallback">
-            <input name="file" type="file" multiple />
+    <div class="form-group">
+        <label class="control-label col-md-2 col-sm-3">$iv-label</label>
+        <div class="dropzone col-md-10 col-sm-9" id="dropzonediv">
+            <div class="fallback">
+                <input name="file" type="file" multiple />
+            </div>
         </div>
-    </form>
+    </div>
     <script>
-        Dropzone.options.dropzoneUploader = { 
-            autoProcessQueue: false,
-            uploadMultiple: true,
-            parallelUploads: 100,
-            maxFiles: 100,
-            init: function () {   
-            }
-        }
+        $(document).ready(function () {
+            $("div#dropzonediv ").dropzone({
+                url: "/file/post",
+                autoProcessQueue: false,
+                uploadMultiple: true,
+                parallelUploads: 3,
+                maxFiles: 3,
+                init: function () {
+                    var myDropzone = this;
+                    // First change the button to actually tell Dropzone to process the queue.
+                    $(this.element).parents('form').find('button').click(function (e) {
+                        // Make sure that the form isn't actually being sent.
+                        e.preventDefault();
+                        e.stopPropagation();
+                        myDropzone.processQueue();
+                    });
+
+                    // Listen to the sendingmultiple event. In this case, it's the sendingmultiple event instead
+                    // of the sending event because uploadMultiple is set to true.
+                    this.on("sendingmultiple", function () {
+                        // Gets triggered when the form is actually being sent.
+                        // Hide the success button or the complete form.
+                    });
+                    this.on("successmultiple", function (files, response) {
+                        // Gets triggered when the files have successfully been sent.
+                        // Redirect user or notify of success.
+                    });
+                    this.on("errormultiple", function (files, response) {
+                        // Gets triggered when there was an error sending the files.
+                        // Maybe show form again, and notify user of error
+                    });
+                }
+            });
+        })
     </script>
 </control>
