--- a/iWork.Web.UI/Content/css/control.css
+++ b/iWork.Web.UI/Content/css/control.css
@@ -1,15 +1,15 @@
 ﻿.dropzone {
-  padding: 0px;
-  width: 100%;
   float: left;
   min-height: 160px;
   overflow: visible !important;
+  padding: 0px;
+  margin: 10px 0px;
+  background-color: #f9f9f9;
+  border: 2px dashed #eeeeee;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
-  border-radius: 5px;
-  border: 2px dashed #eeeeee;
-  background-color: #f9f9f9; }
+  border-radius: 5px; }
 
 .dropzone .dz-preview:hover .dz-image img {
   -webkit-transform: scale(1.05, 1.05);
@@ -24,16 +24,19 @@
   font-size: 20px;
   color: #999999; }
 
+.dz-preview {
+  display: block;
+  float: left;
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(204, 204, 204, 0.65);
+  -moz-box-shadow: 0px 0px 3px 1px rgba(204, 204, 204, 0.65);
+  box-shadow: 0px 0px 3px 1px rgba(204, 204, 204, 0.65); }
+
 .dropzone .dz-preview .dz-image {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   border-radius: 5px;
-  border-radius: 0px !important; }
-
-.dz-preview {
-  display: block;
-  float: left; }
+  border-radius: 0 !important; }
 
 .dz-error-message {
   z-index: 10000; }
@@ -43,6 +46,70 @@
   float: left;
   height: auto;
   min-height: 600px;
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 0px;
+  margin: 0px; }
+
+/* Search Box
+----------------------------------------------------------------*/
+.search-box {
+  display: block;
+  width: 100%;
+  overflow: visible;
+  padding: 0px !important;
+  margin: 0px !important;
+  position: relative;
+  border-bottom: 1px solid #eeeeee; }
+  .search-box .form-group {
+    display: block;
+    float: left;
+    width: 100%;
+    padding: 0px !important;
+    margin: 0px !important;
+    width: 100% !important; }
+
+.search-box input {
+  border: none !important;
+  float: left;
+  font-size: 20px;
+  margin-left: 28px;
+  color: #333333;
+  width: 100%; }
+
+.search-box div.search-box-icon {
+  display: block;
+  position: absolute;
+  top: 5px;
+  width: 24px;
+  left: 0px;
+  font-size: 24px;
+  color: #999999; }
+
+.search-box button {
+  display: block;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 80px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  background: #eeeeee;
+  border: none;
+  color: #333333;
+  padding: 0px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px; }
+
+.search-box button.disabled {
+  background: #eeeeee; }
+
+.search-box-message {
+  display: block;
+  font-size: 11px;
+  color: #999999;
+  margin-top: 3px; }
 
 /*# sourceMappingURL=control.css.map */
