--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
 
     <!--<link rel="stylesheet" href="https://raw.githubusercontent.com/pylover/bootstrap-rtl/master/build/css/bootstrap.rtl.css">-->
+
+    <!--<link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.2.0-rc2/css/bootstrap-rtl.css">-->
+
     <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.min.css">-->
 
     <link rel="stylesheet" type="text/css" href="/Content/lib/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone.css" />
-
-
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
+
     <script src="/Content/Scripts/jquery-2.1.1.min.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/Content/Scripts/angular.min.js"></script>
