--- a/iWork.Web.UI/Content/css/control.css
+++ b/iWork.Web.UI/Content/css/control.css
@@ -41,6 +41,9 @@
 .dz-error-message {
   z-index: 10000; }
 
+.slick-container {
+  direction: ltr; }
+
 .slick-slide {
   width: 100%;
   float: left;
@@ -53,63 +56,198 @@
 /* Search Box
 ----------------------------------------------------------------*/
 .search-box {
-  display: block;
-  width: 100%;
-  overflow: visible;
-  padding: 0px !important;
-  margin: 0px !important;
-  position: relative;
-  border-bottom: 1px solid #eeeeee; }
-  .search-box .form-group {
-    display: block;
-    float: left;
+  border: 1px solid #eeeeee;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  /*display: block;
     width: 100%;
+    overflow: visible;
     padding: 0px !important;
     margin: 0px !important;
-    width: 100% !important; }
+    position: relative;
+    border-bottom: 1px solid #eeeeee;
+    height:32px;
+    float:right;*/ }
+  .search-box .button-box {
+    padding: 0px;
+    border: none;
+    background: none; }
+  .search-box .input-group-addon {
+    border: none; }
+  .search-box input {
+    border: none !important; }
+  .search-box button {
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+    border-radius: 0px; }
 
-.search-box input {
-  border: none !important;
-  float: left;
-  font-size: 20px;
-  margin-left: 28px;
-  color: #333333;
-  width: 100%; }
+/*.search-box input {
+    border: none !important;
+    float: left;
+    font-size: 20px;
+    color: #333333;
+    width: 100%;
+    position:absolute;
+    margin:0px;
+    left:28px;
+    height:27px;
+}
 
-.search-box div.search-box-icon {
-  display: block;
-  position: absolute;
-  top: 5px;
-  width: 24px;
-  left: 0px;
-  font-size: 24px;
-  color: #999999; }
+.search-box input:focus,
+.search-box input{
+    outline:none;
+}
+
+.search-box span.search-box-icon {
+    display: block;
+    position: absolute;
+    top: 2px;
+    width: 22px;
+    left: 0px;
+    font-size: 22px;
+    color: #999999;
+
+}
 
 .search-box button {
-  display: block;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 80px;
-  height: 32px;
-  line-height: 32px;
-  text-align: center;
-  background: #eeeeee;
-  border: none;
-  color: #333333;
-  padding: 0px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  border-radius: 3px; }
+    display: block;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 80px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    background: #eeeeee;
+    border: none;
+    color: #333333;
+    padding: 0px;
+    @include border-radius(3px);
+}
+    .search-box button.disabled {
+    background: #eeeeee;
+}
 
-.search-box button.disabled {
-  background: #eeeeee; }
-
+*/
 .search-box-message {
   display: block;
   font-size: 11px;
   color: #999999;
   margin-top: 3px; }
+
+/* Form Container
+======================================================================*/
+.form-container {
+  display: block;
+  width: 100% !important; }
+
+.form-container fieldset {
+  margin-bottom: 8px; }
+
+.form-container h3 {
+  display: block;
+  font-size: 28px;
+  height: 32px;
+  line-height: 32px; }
+
+.form-horizontal .form-group {
+  padding: 0px;
+  margin: 10px 0px !important; }
+
+.form-horizontal .form-group label {
+  font-size: 14px;
+  font-weight: lighter;
+  color: #333333;
+  text-align: left;
+  padding-right: 0px;
+  padding-left: 0px; }
+
+.form-horizontal .form-group input {
+  border: none;
+  border-bottom: 1px solid #eeeeee;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  border-radius: 0px;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  color: #333333 !important; }
+
+::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #cccccc !important; }
+
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #cccccc !important;
+  opacity: 1; }
+
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #cccccc !important;
+  opacity: 1; }
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #cccccc !important; }
+
+.ajax-box {
+  position: absolute;
+  top: 0px;
+  right: 200px;
+  left: 200px;
+  height: 22px;
+  z-index: 5000000; }
+
+.ajax-box div.loading {
+  display: none;
+  width: 220px;
+  height: 24px;
+  margin: 0px auto 0px auto;
+  background-image: url("../img/loading.gif"); }
+
+/* Iconic button
+==================================*/
+.btn-iconic {
+  background-color: #eeeeee;
+  outline: none; }
+
+.btn-iconic:focus, .btn-iconic:active {
+  outline: none; }
+
+.btn-iconic span {
+  float: left;
+  height: 28px;
+  line-height: 28px;
+  color: #bbbbbb; }
+
+.icon-element {
+  margin: 0px 0px 0px 5px;
+  display: block;
+  text-indent: -9999px;
+  width: 24px;
+  height: 24px;
+  background-size: 24px 24px;
+  background-repeat: no-repeat; }
+
+.btn-iconic.selected {
+  color: #2196F3; }
+
+.btn-iconic.selected .svg-inject {
+  fill: #2196F3 !important; }
+
+.btn-iconic.selected span {
+  color: #2196F3; }
+
+.btn-iconic .svg-inject {
+  fill: #BBBBBB !important;
+  width: 24px;
+  height: 24px;
+  float: left;
+  margin: 0px 0px 0px 5px; }
 
 /*# sourceMappingURL=control.css.map */
