--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -1,10 +1,12 @@
 ﻿@import '_helper.scss';
 
+
 .dropzone {
     float: left;
     min-height: 160px;
+    padding:0px;
     overflow: visible !important;
-    padding: 0px;
+    width:100%;
     margin: 10px 0px;
     background-color: #f9f9f9;
     border: 2px dashed #eeeeee;
@@ -40,10 +42,6 @@
 
 .dz-error-message {
     z-index: 10000;
-}
-
-.slick-container {
-    direction: ltr;
 }
 
 .slick-slide {
