--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -7,8 +7,7 @@
 body {
   font-family: 'Open Sans';
   padding-top: 72px;
-  background: #EEEEEE;
-  direction: ltr !important; }
+  background: #EEEEEE; }
 
 .panel-image {
   -webkit-border-radius: 5px;
@@ -161,8 +160,9 @@ body {
 .dropzone {
   float: left;
   min-height: 160px;
-  overflow: visible !important;
   padding: 0px;
+  overflow: visible !important;
+  width: 100%;
   margin: 10px 0px;
   background-color: #f9f9f9;
   border: 2px dashed #eeeeee;
@@ -200,9 +200,6 @@ body {
 
 .dz-error-message {
   z-index: 10000; }
-
-.slick-container {
-  direction: ltr; }
 
 .slick-slide {
   width: 100%;
