--- a/iWork.Web.UI/Template/Default/Controls/uploader/dropzone.html
+++ b/iWork.Web.UI/Template/Default/Controls/uploader/dropzone.html
@@ -1,9 +1,11 @@
 ﻿<control iv-label="">
     <div class="form-group">
         <label class="control-label col-md-2 col-sm-3">$iv-label</label>
-        <div class="dropzone col-md-10 col-sm-9" id="dropzonediv">
-            <div class="fallback">
-                <input name="file" type="file" multiple />
+        <div class=" col-md-10 col-sm-9" >
+            <div class="dropzone" id="dropzonediv">
+                <div class="fallback">
+                    <input name="file" type="file" multiple />
+                </div>
             </div>
         </div>
     </div>
