--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
 
-    <!--<link rel="stylesheet" href="https://raw.githubusercontent.com/pylover/bootstrap-rtl/master/build/css/bootstrap.rtl.css">-->
+   
+    <!-- Uncomment Next two line for RTL view  -->
+    <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.css">
+    <link rel="stylesheet" href="/Content/css/style.rtl.css" media="screen">-->
 
-    <!--<link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.2.0-rc2/css/bootstrap-rtl.css">-->
-
-    <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.min.css">-->
 
     <link rel="stylesheet" type="text/css" href="/Content/lib/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone.css" />
@@ -41,14 +41,14 @@
             </div>
         </div>
         <div class="navbar-right col-md-1 col-xs-3">
-            <div class="member-territory pull-right">
+            <div class="member-territory pull-right flip">
                 <img class="svg-inject" src="/Content/img/user.svg" />
             </div>
         </div>
         <div class="bottom-inner-shadow"></div>
     </nav>
     <div class="container page-container">
-        <div class="col-md-1 sub-menu hidden-xs">
+        <div class="col-md-1 sub-menu hidden-xs fit-height">
             <sidecontent></sidecontent>
         </div>
         <div class="col-md-11 main-content">
