--- a/iWork.Web.UI/Template/Default/Controls/button/update.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/update.html
@@ -2,9 +2,5 @@
     <span class="update-entity glyphicon glyphicon-pencil"
           data-entity-id="$iv-entity-id"
           data-model="$iv-model"
-          data-confirm="$iv-confirm"
-          data-toggle="$iv-toggle"
-          data-target="$iv-target"
-          data-whatever="$iv-entity-id"
-          ></span>
+          data-target-form="$iv-target-form"></span>
 </control>
