Add Date/timepicker, Datatables

--- a/iWork.Web.UI/Content/css/control.css
+++ b/iWork.Web.UI/Content/css/control.css
@@ -1,4 +1,12 @@
-﻿.dropzone {
+﻿/* Over bootstrap
+====================================================*/
+.input-group-addon {
+  border: none;
+  background: none; }
+
+/* File uploader
+====================================================*/
+.dropzone {
   float: left;
   min-height: 160px;
   padding: 0px;
