--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -1,6 +1,16 @@
 ﻿@import '_helper.scss';
 
+/* Over bootstrap
+====================================================*/
 
+.input-group-addon{
+    border:none;
+    background:none;
+}
+
+
+/* File uploader
+====================================================*/
 .dropzone {
     float: left;
     min-height: 160px;
