--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -157,6 +157,14 @@ body {
   margin: 5px;
   fill: #bbbbbb; }
 
+/* Over bootstrap
+====================================================*/
+.input-group-addon {
+  border: none;
+  background: none; }
+
+/* File uploader
+====================================================*/
 .dropzone {
   float: left;
   min-height: 160px;
