--- a/iWork.Web.UI/Template/Default/Controls/input/text.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/text.html
@@ -12,7 +12,8 @@
                    ng-minlength="$iv-minlength"
                    ng-maxlength="$iv-maxlength"
                    ng-pattern="$iv-pattern"
-                   ng-change="$iv-change" />
+                   ng-change="$iv-change"
+                    />
         </div>
     </div>
 </control>
