--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
 
-   
+
     <!-- Uncomment Next two line for RTL view  -->
     <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.css">
     <link rel="stylesheet" href="/Content/css/style.rtl.css" media="screen">-->
@@ -14,11 +14,26 @@
 
     <link rel="stylesheet" type="text/css" href="/Content/lib/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone.css" />
+
+    <link rel="stylesheet" type="text/css" href="/Content/lib/datatables/css/jquery.dataTables.css" />
+
+    <link rel="stylesheet" type="text/css" href="/Content/lib/datetimepicker/css/bootstrap-datetimepicker.css" />
+
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
 
     <script src="/Content/Scripts/jquery-2.1.1.min.js"></script>
+
+
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/Content/lib/moment.js"></script>
+
+    <script src="/Content/lib/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+
+
+    <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/Scripts/angular.min.js"></script>
+    <script src="/Content/lib/angular-datatables/angular-datatables.js"></script>
+
     <script type="text/javascript" src="/Content/lib/slick/slick.min.js"></script>
     <script type="text/javascript" src="/Content/lib/jquery.svginject.js"></script>
     <script type="text/javascript" src="/Content/lib/dropzone.js"></script>
@@ -31,8 +46,6 @@
         </div>
         <div id="navbar" class="col-md-10 hidden-xs">
             <ul class="nav navbar-nav">
-                <li><a href="/iView/Contacts/Contactsadd.html">Add Contact</a></li>
-                <li><a href="/iView/Contacts/Contactslist.html">Conatct List</a></li>
                 <li><a href="/iView/Rollcall/list.html">RollCall</a></li>
                 <li><a href="/iView/Contacts/list.html">Contact</a></li>
                 <li><a href="/iView/kitchensink/kitchensink.html">kitchensink</a></li>
