--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iwork">
 <head>
     <meta charset="utf-8">
     <title>Title</title>
@@ -38,6 +38,9 @@
     <script type="text/javascript" src="/Content/lib/jquery.svginject.js"></script>
     <script type="text/javascript" src="/Content/lib/dropzone.js"></script>
     <script src="/Content/js/page.js"></script>
+
+
+
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
